docs/docs/apache-airflow-providers-nomad/0.0.8.dev1/_sources/changelog.rst.txt
0.0.8.dev1
.................
## What's Changed
* [DOCS] Docs fixes 0.0.7 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/88
* [DOCS ]Docs fixes 0.0.7 (attempt 2) by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/89
* [VERSION] 0.0.8.dev1 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/90
* [CI] Timeout increase on 'main' as new  Integration Tests were added by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/91
* [BUGFIX] #87 Runqueue not cleaned up by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/92
* [REFACTOR] NomadPythonTaskOperator operator is inheriting from NomadTaskOperator by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/93


**Full Changelog**: https://github.com/juditnovak/airflow-provider-nomad/compare/0.0.7...0.0.8.dev1


0.0.7
.................
* [VERSION ] 0.0.7.dev2 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/82
* [BUGFIX] Python task multiline header processing is broken by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/83
* [FEATURE] `executor_config` by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/71
* [BUFIX] Advertising decorators so that Task SDK could discover by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/73
* [DOCS] Latest changes by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/74
* [FEATURE] `args` allowd for `@task.nomad_task` by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/75
* [docs_0.0.7.dev1_fix]: [HTML] 0.0.7dev1 -> 0.0.7.dev1 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/76
* [DOCS] Python operator by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/78
* [FEATURE] Python operator by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/77
* 0 0 7 dev1 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/80
* [DOCS] Tiny doc change by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/81


**Full Changelog**: https://github.com/juditnovak/airflow-provider-nomad/compare/0.0.6...0.0.7


0.0.6
..............

* Minor administrative fixes by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/52
* Minor docs fixes by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/53
* Minor docs fixes by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/54
* [BUGFIX] Configurable runner logs by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/56
* [DOCS] Task logs location configurable by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/57
* [RELEASE] 0.0.6.dev1 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/58
* [VERSION] Version increase: 0.0.6.dev2 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/59
* [VERSION][DOCS][HTML] Version increase: 0.0.6.dev2 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/60
* [TESTS] System tests cleanup by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/61
* Upgrade to Airflow 3.1.3 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/50


**Full Changelog**: https://github.com/juditnovak/airflow-provider-nomad/compare/0.0.5...0.0.6


0.0.5
...........
* Release 0.0.4 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/34
* [CI] main pipeline fix by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/35
* [CI] main pipeline fix (final) by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/36
* [pypi]: [CI] Pypi release by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/37
* [..] Squashed entries involving no code changes but CI/README.rst changes for Pypi release
* [DOCS] Fixes by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/44
* [DOCS] Still fixing by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/45
* [RELEASE] Pre-release 0.0.5b1 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/46


**Full Changelog**: https://github.com/juditnovak/airflow-provider-nomad/compare/0.0.4...0.0.5

0.0.4
...........
* [DOCS] Attempt to fix missing js supprt by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/26
* [DOCS] Enabling both local and remote build by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/28
* Setting latest changes to refer to 0.0.dev4 by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/29
* Tenacity retries for job submission and deregister by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/30
* Extending test coverage by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/31
* Coverage and small fixes for workload management by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/32
* Resource allocation by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/33

**Full Changelog**: https://github.com/juditnovak/airflow-provider-nomad/compare/0.0.3...0.0.4

0.0.3
......

* Decorators by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/22
* Docs in Production structure, versioning enabled by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/23
* 0 0 34c by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/24


**Full Changelog**: https://github.com/juditnovak/airflow-provider-nomad/compare/0.0.2...0.0.3


0.0.2
......

* Operators: `NomadJobOperator` and `NomadTaskOperator` by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/15
* [CI] Timeout increase by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/16
* Enabling support for Airflow templating by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/17


**Full Changelog**: https://github.com/juditnovak/airflow-provider-nomad/compare/0.0.1...0.0.2
**Release Notes**: https://github.com/juditnovak/airflow-provider-nomad/releases/tag/0.0.2


0.0.1
......

* Nomad executor with bash operator by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/1
* System tests by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/3
* Tests completed and cleaned up by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/4
* Cleanup and small executor enhancements by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/5
* Pipeline on merge to `main` by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/6
* Logging finalized by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/7
* Base documentation by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/8
* Modification on logging by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/9
* Enabling secure Nomad connections by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/10
* Configuration parameter `default_job_template` by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/11
* Handling Job submission errors by @juditnovak in https://github.com/juditnovak/airflow-provider-nomad/pull/13

**Full Changelog**: https://github.com/juditnovak/airflow-provider-nomad/commits/0.0.1
**Release Notes**: https://github.com/juditnovak/airflow-provider-nomad/releases/tag/0.0.1
